# edify

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  README.md  justfile  package.json  pyproject.toml
.cache/: just-help-agent-core.txt
.claude/: .gitignore  settings.json  settings.local.json  settings.visible.json
.claude/agents/: artisan.md  corrector.md  crew-recall-tool-anchoring-p1.md  crew-recall-tool-anchoring-p4.md  crew-userpromptsubmit-topic-p1.md  crew-userpromptsubmit-topic-p2.md  crew-userpromptsubmit-topic-p3.md  design-corrector.md  handoff-cli-tool-corrector.md  handoff-cli-tool-impl-corrector.md  handoff-cli-tool-implementer.md  handoff-cli-tool-task.md  handoff-cli-tool-test-corrector.md  handoff-cli-tool-tester.md  hb-p1.md  hb-p2.md  hb-p3.md  hb-p4.md  hb-p5.md  hooks-tester.md  outline-corrector.md  phase-scoped-agents-task.md  plan-reviewer.md  plugin-migration-corrector.md  plugin-migration-task.md  pushback-task.md  quality-infrastructure-task.md  remember-skill-update-task.md  runbook-corrector.md  runbook-generation-fixes-task.md  runbook-outline-corrector.md  runbook-quality-gates-task.md  runbook-simplification-agent.md  runbook-simplifier.md  scout.md  tdd-auditor.md  test-driver.md  when-recall-task.md  worktree-merge-data-loss-task.md  worktree-merge-from-main-corrector.md  (+7 more)
.claude/rules/: commit-work.md  hook-development.md  planning-work.md  plugin-dev-validation.md  skill-development.md
.claude/skills/: codify  doc-writing  error-handling  ground  how  inline  memory-index  plugin-dev-validation  proof  review  review-plan  runbook  when  worktree
agents/: README.md  ROADMAP.md  SYSPROMPT_GENERATION_GUIDE.md  backlog.md  jobs.md  learnings.md  memory-index.md  plan-archive.md  role-code.md  role-code.sys.md  role-lint.sys.md  role-planning.sys.md  role-review.sys.md  session.md
agents/archive/: 2026-01-07-bug4-complete.md  2026-01-07-context.md
agents/decisions/: cli.md  data-processing.md  defense-in-depth.md  deliverable-review.md  execution-strategy.md  hook-patterns.md  implementation-notes.md  markdown-tooling.md  marketplace.md  operational-practices.md  operational-tooling.md  orchestration-execution.md  pipeline-contracts.md  pipeline-review.md  project-config.md  prompt-structure-research.md  runbook-review.md  testing.md  validation-quality.md  workflow-advanced.md  workflow-core.md  workflow-execution.md  workflow-optimization.md  workflow-planning.md
plans/: README.md
plans/active-recall/: EXECUTION_REPORT.md  brief.md  classification.md  lifecycle.md  outline.md  (+2 more)
research/: sonnet-base-agent.md  sonnet-base-subagent.md  sonnet-minimal-subagent.md  sonnet-zero-comparison.md  sonnet-zero-subagent.md
scripts/: scrape-validation.py
tests/: __init__.py  conftest.py  fixtures_worktree.py  pytest_helpers.py  test_account_keychain.py  test_account_providers.py  test_account_state.py  test_account_switchback.py  test_account_usage.py  test_add_slug_marker.py  test_agent_files.py  test_cli_account.py  test_cli_analyze.py  test_cli_collect.py  test_cli_compose.py  test_cli_extract_basic.py  test_cli_extract_output.py  test_cli_list.py  test_cli_markdown.py  test_cli_model.py  test_cli_rules.py  test_cli_statusline.py  test_cli_tokens.py  test_cli_tokens_config.py  test_cli_version.py  test_commit_pipeline_errors.py  test_compose.py  test_continuation_consumption.py  test_continuation_integration.py  test_continuation_parser.py  test_continuation_registry.py  test_discovery.py  test_extraction.py  test_filtering.py  test_git_cli.py  test_git_helpers.py  test_learning_ages.py  test_learning_ages_integration.py  test_learnings_consolidation.py  test_learnings_diff3.py  (+163 more)
(+1602 files in other folders)
