[project]
name = "edify-cli"
version = "0.0.2"
description = "CLI toolkit for the edify Claude Code plugin"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.75.0",
    "click>=8.3.1",
    "platformdirs>=4.5.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "socksio>=1.0.0",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/ddaanet/edify"
Repository = "https://github.com/ddaanet/edify"

[project.scripts]
edify = "edify.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "pytest>=7.0",
    "pytest-mock>=3.15.1",
    "pytest-markdown-report>=0.0.2",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edify"]

[tool.docformatter]
recursive = true
in-place = true
wrap-summaries = 80
wrap-descriptions = 80

[tool.ruff]
exclude = ["plugin", ".claude", "plans/prototypes"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",     # no blank line required before class docstring
    "D213",     # multi-line docstring summary should start at the first line
    "S603",     # subprocess call
    "S607",     # partial executable path
    "PLR2004",  # Magic value used in comparison
    "EM",       # Error message can be duplicated in traceback, no problem.
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "FIX",      # FIXME comments should not cause failure
    "S101",     # Authorize assert
    "T201",     # Authorize print
    "T203",     # Authorize pprint

    # Handled by docformatter. Enabling in ruff causes redundant changes.
    "D209",     # Multi-line docstring closing quotes should be on a separate line

    # Rules that should be disabled when using ruff as a formatter.
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",     # tab-indentation
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "D206",     # docstring-tab-indentation
    "D300",     # triple-single-quotes
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "ISC002",   # multi-line-implicit-string-concatenation
    "TC001",    # typing-only-first-party-import
    "TC002",    # typing-only-third-party-import
    "TC003",    # typing-only-standard-library-import
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # Assert statements
    "ARG",      # Unused function arguments
    # "FBT",    # Ignore boolean traps in test parameters
    "SLF001",   # Private member accessed
    "TRY003",   # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = ["src", "tests"]
strict = true
extra_checks = true
error_summary = false
# Turn on experimental option
# https://mypy.readthedocs.io/en/stable/config_file.html#confval-allow_redefinition_new
allow_redefinition_new = true
local_partial_types = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
strict = true
testpaths = ["tests"]
addopts = "--no-header --tb=short -m 'not e2e'"
markers = [
    "e2e: end-to-end tests requiring API credentials",
]
